--- a/Data Utama/Document/web/vsly-profile/project/package.json
+++ b/Data Utama/Document/web/vsly-profile/project/package.json
@@ -1,8 +1,8 @@
 {
   "name": "landing-page",
+  "homepage": "https://www.vausly.my.id/web-profile",
   "version": "0.0.0",
   "type": "module",
-  "homepage": "./", 
   "scripts": {
     "dev": "vite",
     "build": "vite build",
